# local-memory-hub

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/desktop/: README.md  stage-runtime.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/feishu-bot/: README.md
design-mockups/: render-ui-mockups.cjs
docs/: DISTRIBUTION.md  SPIKE-RESULTS-001.md  SPIKE-RESULTS-002.md  SPIKE-RESULTS-003.md  SPIKE-RESULTS-004.md  SPIKE-RESULTS-005.md  SPIKE-RESULTS-006.md  SPIKE-RESULTS-007.md  SPIKE-RESULTS-008.md  SPIKE-RESULTS-009.md  SPIKE-RESULTS-010.md  SPIKE-RESULTS-011.md  SPIKE-RESULTS-012.md  SPIKE-RESULTS-013.md  SPIKE-RESULTS-014.md  SPIKE-RESULTS-015.md  SPIKE-RESULTS-016.md  SPIKE-RESULTS-017.md  SPIKE-RESULTS-018.md  SPIKE-RESULTS-019.md  SPIKE-RESULTS-020.md  SPIKE-RESULTS-021.md  SPIKE-RESULTS-022.md  SPIKE-RESULTS-023.md  SPIKE-RESULTS-024.md  SPIKE-RESULTS-025.md  SPIKE-RESULTS-026.md  SPIKE-RESULTS-027.md  USAGE.md  architecture.md  developer-extension-guide.md  integration-guide.md  user-guide.md
docs/design-archive/: render-ui-mockups-v2.cjs
docs/engineering/: CODING-STANDARDS.md
docs/integrations/: feishu.md
docs/product-planning/: README.md
spikes/s1-tauri-shell/: README.md
spikes/s13-npm-cli/: README.md  package.json
spikes/s8-graph-library-force-graph/: README.md  index.html  package-lock.json  package.json
(+145 files in other folders)
